#15 - Updating the OpenAPI specifications
